--- a/estilos/estyle.css
+++ b/estilos/estyle.css
@@ -8,8 +8,8 @@
 
 html, body {
 
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
    
 }
 
@@ -18,6 +18,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    
     
 }    
 
